Fix: Homepage summary contrasting colors.

--- a/assets/assets/scss/layouts/_home.scss
+++ b/assets/assets/scss/layouts/_home.scss
@@ -27,9 +27,9 @@
         font-weight: bold;
 
         &>p {
-            opacity: 0.5;
+            opacity: 0.7;
             margin: 0 0 25px 0;
-            font-size: 0.95rem;
+            font-size: 0.86rem;
             font-weight: normal;
         }
     }
